Prevent x-axis overflow on mobile

--- a/site/main.css
+++ b/site/main.css
@@ -224,6 +224,7 @@ main {
 }
 
 .about h2 {
+    box-sizing: border-box;
     font-size: 3.5em;
     color: #9F8144;
     text-shadow: -1px -1px #f0c266;
@@ -415,7 +416,7 @@ footer a {
 
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px) {  
     a {
         font-size: 1.2em;
     }
@@ -506,11 +507,16 @@ footer a {
 
     .products {
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         flex-wrap: wrap;
         width: 100%;
         min-height: 800px;
+    }
+
+    .products h1 {
+        margin-left: 0;
+        width: 200px;
     }
 
     .products div {
@@ -526,7 +532,6 @@ footer a {
         padding: 50px 0;
     }
 
-
     .product-desc {
         box-sizing: border-box;
         max-width: 350px;
@@ -535,7 +540,8 @@ footer a {
 
     .product-desc h1 {
         font-size: 2em;
-        margin-top: 0;
+        margin: 0;
+        width: 250px;
     }
 
     .product-desc p {
